--- a/app/src/main/res/layout/fragment_add_livro.xml
+++ b/app/src/main/res/layout/fragment_add_livro.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +21,7 @@
             android:layout_height="120dp"
             android:layout_gravity="center"
             app:cardCornerRadius="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="13dp"
             app:cardElevation="5dp">
 
             <LinearLayout
@@ -42,14 +43,14 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginRight="99dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:padding="1dp"
             android:text="TITULO DO LIVRO" />
 
         <EditText
             android:id="@+id/EditText_Titulo_Livro"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@drawable/background_caixa_texto"
             android:hint="Ex: O mago"
             android:paddingStart="15dp"
@@ -58,7 +59,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="22dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginRight="97dp"
@@ -68,7 +69,7 @@
         <EditText
             android:id="@+id/EditText_Autor_Livro"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@drawable/background_caixa_texto"
             android:hint="Autor (a)"
             android:paddingStart="15dp"
@@ -87,7 +88,7 @@
                     android:layout_width="158dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginRight="94dp"
                     android:padding="1dp"
                     android:text="GENERO DO LIVRO"
@@ -97,10 +98,10 @@
                 <Spinner
                     android:id="@+id/EditText_Genero_Livro"
                     android:layout_width="173dp"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:background="@drawable/background_caixa_texto"
                     android:hint="Terror"
-                    android:paddingStart="15dp"
+                    android:paddingStart="9dp"
                     android:singleLine="true"
                     android:entries="@array/generos_livros"/>
 
@@ -116,7 +117,7 @@
                     android:layout_height="match_parent"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="10dp"
                     android:padding="1dp"
@@ -125,10 +126,11 @@
                 <EditText
                     android:id="@+id/EditText_Ano_Livro"
                     android:layout_width="119dp"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:background="@drawable/background_caixa_texto"
                     android:hint="Ex: 2023"
                     android:maxLength="4"
+                    android:inputType="number"
                     android:paddingStart="15dp"
                     android:singleLine="true" />
 
@@ -137,11 +139,32 @@
         </androidx.appcompat.widget.ActionMenuView>
 
         <TextView
+            android:layout_width="158dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="94dp"
+            android:padding="1dp"
+            android:text="ESTADO DO LIVRO"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/Spinner_Estado_Livro"
+            android:layout_width="350dp"
+            android:layout_height="45dp"
+            android:background="@drawable/background_caixa_texto"
+            android:hint="Terror"
+            android:paddingStart="9dp"
+            android:singleLine="true"
+            android:entries="@array/estado_livros"/>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="22dp"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="80dp"
             android:padding="1dp"
             android:text="DESCRIÇÃO DO LIVRVO" />
@@ -149,13 +172,36 @@
         <EditText
             android:id="@+id/editTextTextMultiLine_Descricao"
             android:layout_width="match_parent"
-            android:layout_height="119dp"
+            android:layout_height="95dp"
             android:background="@drawable/background_caixa_texto"
             android:ems="10"
             android:gravity="start|top"
             android:hint="Descrição..."
             android:inputType="textMultiLine"
             android:padding="15dp" />
+
+        <androidx.appcompat.widget.ActionMenuView
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <Button
+                android:id="@+id/btn_publicar"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:text="Publicar" />
+
+            <Button
+                android:id="@+id/btn_voltar"
+                android:layout_width="51dp"
+                android:layout_height="69dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#C65A5A"
+                android:text="Voltar" />
+
+        </androidx.appcompat.widget.ActionMenuView>
 
 
     </LinearLayout>
