--- a/app/src/main/res/layout/fragment_add_livro.xml
+++ b/app/src/main/res/layout/fragment_add_livro.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/escolher_foto"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -31,6 +32,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/Inserir_foto_imageView"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/ic_addfoto"/>
@@ -96,7 +98,7 @@
                     android:textStyle="bold" />
 
                 <Spinner
-                    android:id="@+id/EditText_Genero_Livro"
+                    android:id="@+id/EditSP_Genero_Livro"
                     android:layout_width="173dp"
                     android:layout_height="48dp"
                     android:background="@drawable/background_caixa_texto"
